--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "next": "14.0.4",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "website": "link:"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
