--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "eslint": "^8.55.0",
     "next": "14.0.4",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
