--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "clsx": "^2.0.0",
     "eslint": "^8.55.0",
     "next": "14.0.4",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
