--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "@radix-ui/colors": "^3.0.0",
     "clsx": "^2.0.0",
     "eslint": "^8.55.0",
@@ -32,6 +33,7 @@
     "eslint-prettier": "0.0.0-empty",
     "postcss": "^8.4.32",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.7.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   }
