--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@vercel/speed-insights": "^1.0.1",
     "clsx": "^2.0.0",
     "eslint": "^8.55.0",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "sharp": "^0.33.0",
     "tailwind-merge": "^2.1.0"
   },
