chore: Minor Updates

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_SITE_KEYWORDS=nextjs,react,typescript
 DATABASE_URL=''
+DOMAIN="localhost:3000"
