--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.0",
     "@radix-ui/colors": "^3.0.0",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.1",
     "clsx": "^2.0.0",
     "eslint": "^8.55.0",
