--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.7.0",
     "@radix-ui/colors": "^3.0.0",
     "@vercel/analytics": "^1.1.1",
@@ -19,6 +20,7 @@
     "eslint": "^8.55.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
