--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "contentlayer build &&  next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
@@ -17,14 +17,20 @@
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.1",
     "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.55.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "rehype-prism-plus": "^1.6.3",
+    "rehype-slug": "^6.0.0",
     "sharp": "^0.33.0",
     "tailwind-merge": "^2.1.0"
   },
@@ -43,5 +49,10 @@
     "prisma": "^5.7.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
+  },
+  "overrides": {
+    "next-contentlayer": {
+      "next": "$next"
+    }
   }
 }
