--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,6 +3,7 @@
   "semi": true,
   "tabWidth": 2,
   "printWidth": 80,
+  "singleQuote": false,
   "useTabs": false,
   "jsxSingleQuote": true,
   "plugins": ["prettier-plugin-tailwindcss"]
