--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.7.0",
     "@radix-ui/colors": "^3.0.0",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/og": "^0.6.1",
     "@vercel/speed-insights": "^1.0.1",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
