--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.6.1",
     "@vercel/speed-insights": "^1.0.1",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
