--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
     "sharp": "^0.33.0",
+    "swr": "^2.2.4",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
