--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "studio": "prisma studio",
@@ -27,6 +28,7 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-contentlayer": "^0.3.4",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
