--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.55.0",
     "framer-motion": "^10.16.16",
-    "next": "14.0.4",
+    "next": "^14.1.4",
     "next-contentlayer": "^0.3.4",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
