--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.1.6",
     "react-icons": "^4.12.0",
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
