--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "rehype-slug": "^6.0.0",
     "sharp": "^0.33.0",
     "swr": "^2.2.4",
-    "tailwind-merge": "^2.1.0"
+    "tailwind-merge": "^2.1.0",
+    "rehype-pretty-code": "^0.6.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
