--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.7.0",
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.6.1",
