styles: Post Like Added

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,7 @@
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 DOMAIN="localhost:3000"
 NODE_ENV=development
-DATABASE_URL_URL=""
-DATABASE_URL_URL_NON_POOLING=""
-DATABASE_URL_URL_NO_SSL=""
-DATABASE_URL_PRISMA_URL=""
-DATABASE_URL_USER="default"
-DATABASE_URL_PASSWORD=""
-DATABASE_URL_HOST=""
-DATABASE_URL_DATABASE="verceldb"
-DATABASE_URL=""
+DATABASE_URL=
+DIRECT_URL=
+REDIS_URL=
+REDIS_TOKEN=
