--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@upstash/redis": "^1.33.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.6.1",
     "@vercel/speed-insights": "^1.0.1",
