--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate --no-engine && next build",
+    "postinstall": "prisma generate --no-engine",
     "start": "next start",
     "lint": "next lint",
     "studio": "prisma studio",
