--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_KEYWORDS=
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 DOMAIN="localhost:3000"
-NODE_ENV=development
+NODE_ENV=
 DATABASE_URL=
 DIRECT_URL=
 REDIS_URL=
