--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "studio": "prisma studio",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -60,11 +61,13 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.17.0",
     "tailwindcss": "^3.3.6",
+    "turbo": "^2.1.1",
     "typescript": "^5.3.3"
   },
   "overrides": {
     "next-contentlayer": {
       "next": "$next"
     }
-  }
+  },
+  "packageManager": "npm@10.8.1"
 }
