chore: Showcase Page Added

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "prisma generate --no-engine && next dev",
     "build": "prisma generate --no-engine && next build",
     "postinstall": "prisma generate --no-engine",
     "start": "next start",
