--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vercel/og": "^0.6.1",
     "@vercel/speed-insights": "^1.0.1",
     "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
@@ -38,14 +39,16 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
-    "react-github-calendar": "^4.1.6",
+    "react-github-calendar": "^4.3.0",
     "react-icons": "^4.12.0",
     "rehype-pretty-code": "^0.6.0",
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
     "sharp": "^0.33.0",
     "swr": "^2.2.4",
-    "tailwind-merge": "^2.1.0"
+    "tailwind-merge": "^2.1.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
