--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.1.0",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
