--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-github-calendar": "^4.3.0",
     "react-icons": "^4.12.0",
+    "react-share-kit": "^1.1.0",
     "rehype-pretty-code": "^0.6.0",
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
